# avoca-ai-autosuggest

./: README.md  main.py  pyproject.toml  test.py
src/: audio.py  constants.py  llm.py  simple_ui.py
